Refine party sync and compatibility across proxy and Bukkit